<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/task_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/mobile_hint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile" />

    <EditText
        android:id="@+id/et_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/msg_hint"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_wr_SHP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/write_shared"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/et_message" />

    <Button
        android:id="@+id/btn_r_shP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/read_shared"
        app:layout_constraintBottom_toBottomOf="@+id/btn_wr_SHP"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_wr_internal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/write_internal"
        app:layout_constraintEnd_toEndOf="@+id/btn_wr_SHP"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/btn_wr_SHP" />

    <Button
        android:id="@+id/btn_r_internal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_internal"
        app:layout_constraintBottom_toBottomOf="@+id/btn_wr_internal"
        app:layout_constraintEnd_toEndOf="@+id/btn_r_shP"
        app:layout_constraintStart_toStartOf="@+id/btn_r_shP" />

    <Button
        android:id="@+id/btn_wr_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/write_sql"
        app:layout_constraintEnd_toEndOf="@+id/btn_wr_internal"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/btn_wr_internal" />

    <Button
        android:id="@+id/btn_r_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_sql"
        app:layout_constraintBottom_toBottomOf="@+id/btn_wr_sql"
        app:layout_constraintEnd_toEndOf="@+id/btn_r_shP"
        app:layout_constraintStart_toStartOf="@+id/btn_r_shP" />
</androidx.constraintlayout.widget.ConstraintLayout>